--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background: url('../background.jpg') no-repeat center center fixed;
+    /*background: url('../background.jpg') no-repeat center center fixed;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -80,3 +80,41 @@ nav {
 .table-nonfluid {
     width: auto !important;
  }
+
+ /* The Modal (background) */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1040; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+/* Modal Content/Box */
+.modal-content {
+  /*background-color: #fefefe;*/
+  /*margin: 1% auto;*/
+  /*padding: 20px;*/
+  /*border: 1px solid #888;*/
+  width: 0%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
