--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 <button type="button" id="source1Btn">Primary Sources</button></br>
 <button type="button" id="source2Btn">Secondary Sources</button></br>
 
-<div class="card mx-auto my-auto" style="width: 25rem;">
+<div class="card" style="width: 25rem;">
     <div class="card-body">
         <h5 class="card-title" align="center">Specify Ranges</h5>
         <form method="POST" action="{{ url_for('data') }}" id="sliders_form">
@@ -103,7 +103,7 @@
     </div>
 </div>
 
-<div class="container rounded pt-2" style="background-color:white;">
+<div class="container rounded pt-2" style="background-color:white; position:absolute; right:-30px; top:184px;">
     {{ table }}
 </div>
 
