--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <span class="close">&times;</span>
     <div class="card mx-auto my-auto" style="width: 25rem;">
         <div class="card-body">
-            <h5 class="card-title" align="center">Select Fields</h5>
+            <h5 class="card-title" align="center">Select Features</h5>
             <form method="POST" action="{{ url_for('range_filter') }}" id="fields_form">
                 {{ form.csrf_token }}
                 <div id="fields_row" class="pt-2" align="center">
@@ -81,9 +81,7 @@
 
 </div>
 
-<input type="button" class="btn btn-info" value="Fields" id="fieldsBtn">
-<input type="button" class="btn btn-info" value="Primary Sources" id="source1Btn">
-<input type="button" class="btn btn-info" value="Secondary Sources" id="source2Btn">
+<input type="button" class="btn btn-info" value="Features" id="fieldsBtn">
 
 <div class="card" style="width: 25rem;">
     <div class="card-body">
@@ -97,6 +95,8 @@
         <div class="card-footer text-center">
             <input type="text" id="daterange" name="daterange" form="sliders_form" style="text-align: center;" 
                 value="{{ daterange }}" align="center">
+            <input type="button" class="btn btn-info" value="Primary Sources" id="source1Btn">
+            <input type="button" class="btn btn-info" value="Secondary Sources" id="source2Btn">
             <input type="submit" class="btn btn-primary" value="Filter" form="sliders_form" id="btn_submit2">
             <input type="button" class="btn btn-warning" value="Reset" id="btn_reset_fields">
         </div>
